# swarm_multi_agent_langgraph

./: .dockerignore  .gitignore  AWS_SETUP.md  DOCKER_DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_intelligent_rag.py  test_query_optimization.py  test_updated_swarm.py
config/: env.example
docs/: ARCHITECTURE.md  DEPLOYMENT.md
examples/integration/: complete_system_test.py  handoff_swarm_example.py
examples/systems/: comprehensive_systems_demo.py  evaluation_system_demo.py  intelligent_rag_demo.py  query_optimization_demo.py  query_strategy_agent_demo.py
scripts/: docker_build.bat  docker_build.sh  docker_restart.sh  docker_start.bat  docker_start.sh  docker_stop.bat  docker_stop.sh  init_db.sql  setup_complete.py
scripts/database/: setup_database.py
scripts/monitoring/: memory_monitor.py
src/: __init__.py  api_server.py  app.py
src/agents/: __init__.py  evaluation_agent.py  evaluation_agent_with_handoff.py  handoff_swarm.py  query_strategy_agent_with_tools.py
src/api/: __init__.py  api_server.py
src/core/: __init__.py  agent_tools.py  evaluation_tools.py  invoice_system.py  nl2sql_system.py  rag_system.py
src/core/config/: __init__.py  config.py
src/core/memory/: __init__.py  long_term_memory.py  memory_backends.py  memory_manager.py  short_term_memory.py
src/core/monitoring/: __init__.py  alert_manager.py  dashboard.py  drift_detector.py  metrics_collector.py
src/core/state/: __init__.py  state.py
src/infrastructure/: __init__.py  database_client.py  langchain_bedrock_client.py  logging_config.py
src/rag/: __init__.py
src/rag/optimization/: __init__.py  query_optimizer.py  rag_optimization_tools.py
src/rag/strategies/: __init__.py  multi_hop_rag.py  multi_query_rag.py  query_routing.py  query_strategy_agent.py
src/rag/systems/: __init__.py  intelligent_rag_system.py  rag_system.py
src/systems/: __init__.py  evaluation_tools.py  invoice_system.py  nl2sql_system.py
tests/: __init__.py  test_core.py
utils/: health_check.py  run_examples.py
